--- a/GroceryOTG/res/layout/grocery_row.xml
+++ b/GroceryOTG/res/layout/grocery_row.xml
@@ -12,17 +12,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dip">
-
+        <!--TODO:hard coded Max width!!-->
         <TextView
             android:id="@+id/grocery_row_label"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:maxWidth="290dp"
             android:layout_marginTop="6dp"
             android:text="@+id/grocery_row_text"
             android:textSize="24dp"
             android:drawableLeft="@drawable/grocery_icon"
             android:drawablePadding="10dip"
-            android:paddingLeft="20dip"
+            android:paddingLeft="10dip"
             android:singleLine="true"
             >
         </TextView>
