--- a/GroceryOTG/res/layout/category_list.xml
+++ b/GroceryOTG/res/layout/category_list.xml
@@ -4,11 +4,16 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
-    <ListView
-        android:id="@android:id/list"
+    
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/gridview"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        android:layout_height="fill_parent"
+        android:numColumns="3"
+        android:verticalSpacing="5dp"
+        android:horizontalSpacing="5dp"
+        android:gravity="center"
+        android:padding="10dp" />
 
     <TextView
         android:id="@android:id/empty"
@@ -22,5 +27,6 @@
         android:paddingLeft="30dip"
         android:paddingRight="26dip"
         android:singleLine="false"/>
+    
 </LinearLayout>
 
