--- a/GroceryOTG/res/layout/category_row.xml
+++ b/GroceryOTG/res/layout/category_row.xml
@@ -9,12 +9,13 @@
     <TextView
         android:id="@+id/category_row_label"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
+        android:layout_height="110dp"
         android:text="@+id/category_row_text"
-        android:textSize="24dp"
-        android:drawableLeft="@drawable/category_icon"
-        android:drawablePadding="10dip"
+        android:textSize="18dp"
+        android:fontFamily="sans-serif-light"
+        android:textStyle="normal"
+        android:textColor="#ffffff"
+        android:gravity="right|bottom"
         android:paddingLeft="10dip"
         android:singleLine="true"
         >
