--- a/GroceryOTG/res/layout/grocery_row.xml
+++ b/GroceryOTG/res/layout/grocery_row.xml
@@ -12,23 +12,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dip">
+
+        <ImageView
+            android:src="@drawable/add_icon"
+            android:padding="10dip"
+            android:paddingLeft="10dip"
+            android:maxHeight="20dp"
+            android:maxWidth="20dp"
+            android:layout_gravity="center_vertical">
+        </ImageView>
+
         <!--TODO:hard coded Max width!!-->
         <TextView
             android:id="@+id/grocery_row_label"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:maxWidth="290dp"
+            android:maxWidth="230dp"
             android:layout_marginTop="6dp"
             android:text="@+id/grocery_row_text"
-            android:textSize="24dp"
+            android:textSize="14dp"
             android:fontFamily="sans-serif-light"
-        	android:textStyle="normal"
-            android:drawableStart="@drawable/add_icon"
-            android:drawablePadding="10dip"
-            android:paddingLeft="10dip"
+            android:textStyle="normal"
             android:singleLine="false"
-            android:gravity="top|left"
-            >
+            android:gravity="center_vertical">
         </TextView>
 
         <TextView
@@ -38,14 +44,13 @@
             android:layout_marginTop="6dp"
             android:text="@+id/grocery_row_price_text"
             android:textColor="@android:color/holo_red_dark"
-            android:textSize="24dp"
+            android:textSize="18dp"
             android:fontFamily="sans-serif-condensed"
-        	android:textStyle="bold"
+            android:textStyle="bold"
             android:singleLine="true"
             android:gravity="right"
             android:layout_weight="1.0"
             android:paddingRight="10dp">
-
         </TextView>
     </TableRow>
 </TableLayout>
