--- a/GroceryOTG/res/layout/shopcart_row.xml
+++ b/GroceryOTG/res/layout/shopcart_row.xml
@@ -10,10 +10,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
-        android:lines="1"
-        android:text="@+id/TextView01"
-        android:textSize="24dp"
-        >
+        android:textSize="14dp"
+        android:fontFamily="sans-serif-light"
+        android:textStyle="normal"
+        android:singleLine="false"
+        android:gravity="center_vertical">
     </TextView>
 
 </LinearLayout>
