--- a/GroceryOTG/res/layout/category_row.xml
+++ b/GroceryOTG/res/layout/category_row.xml
@@ -11,14 +11,12 @@
         android:layout_width="fill_parent"
         android:layout_height="110dp"
         android:text="@+id/category_row_text"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:fontFamily="sans-serif-light"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="#ffffff"
         android:gravity="right|bottom"
-        android:paddingLeft="8dip"
-        android:paddingRight="8dip"
-        android:paddingBottom="5dip"
+        android:paddingLeft="10dip"
         android:singleLine="false"
         >
     </TextView>
