--- a/GroceryOTG/res/layout/category_row.xml
+++ b/GroceryOTG/res/layout/category_row.xml
@@ -11,12 +11,14 @@
         android:layout_width="fill_parent"
         android:layout_height="110dp"
         android:text="@+id/category_row_text"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:fontFamily="sans-serif-light"
         android:textStyle="normal"
         android:textColor="#ffffff"
         android:gravity="right|bottom"
         android:paddingLeft="10dip"
+        android:paddingBottom="5dip"
+        android:paddingRight="8dip"
         android:singleLine="false"
         >
     </TextView>
