--- a/GroceryOTG/res/menu/menu.xml
+++ b/GroceryOTG/res/menu/menu.xml
@@ -5,20 +5,20 @@
     <item
         android:id="@+id/map"
         android:showAsAction="always"
-        android:title="Map"
+        android:title="@string/slidingmenu_item_map"
         android:icon="@drawable/ic_menu_map"/>
 
     <item
         android:id="@+id/shop_cart"
         android:showAsAction="always"
-        android:title="Shopping Cart"
+        android:title="@string/slidingmenu_item_cart"
         android:icon="@drawable/ic_menu_cart"/>
 
     <item
         android:id="@+id/refresh"
         android:showAsAction="always"
         android:icon="@drawable/ic_menu_refresh"
-        android:title="Refresh">
+        android:title="@string/slidingmenu_item_sync">
     </item>
 
 </menu>
