--- a/GroceryOTG/res/values/dimens.xml
+++ b/GroceryOTG/res/values/dimens.xml
@@ -19,6 +19,7 @@
     <dimen name="slidingmenu_offset">120dp</dimen>
     <dimen name="list_padding">10dp</dimen>
     <dimen name="shadow_width">15dp</dimen>
+    <dimen name="slidingmenu_item_height">50dp</dimen>
 
     <integer name="num_cols">1</integer>
 
