--- a/GroceryOTG/res/menu/groceryoverview_menu.xml
+++ b/GroceryOTG/res/menu/groceryoverview_menu.xml
@@ -4,10 +4,11 @@
 
     <item
         android:id="@+id/search"
-        android:showAsAction="always"
+        android:showAsAction="always|collapseActionView"
         android:title="@string/groceryoverview_menu_item_search"
-        android:icon="@drawable/ic_menu_search"/>
-
+        android:icon="@drawable/ic_menu_search"
+        android:actionViewClass="android.widget.SearchView" />
+	
     <item
         android:id="@+id/filter"
         android:showAsAction="always"
