--- a/GroceryOTG/res/layout/grocery_row.xml
+++ b/GroceryOTG/res/layout/grocery_row.xml
@@ -19,7 +19,8 @@
             android:paddingLeft="10dip"
             android:maxHeight="20dp"
             android:maxWidth="20dp"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/groceryoverview_row_imagedesc">
         </ImageView>
 
         <!--TODO:hard coded Max width!!-->
@@ -30,7 +31,7 @@
             android:maxWidth="230dp"
             android:layout_marginTop="6dp"
             android:text="@+id/grocery_row_text"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:fontFamily="sans-serif-light"
             android:textStyle="normal"
             android:singleLine="false"
@@ -44,7 +45,7 @@
             android:layout_marginTop="6dp"
             android:text="@+id/grocery_row_price_text"
             android:textColor="@android:color/holo_red_dark"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:fontFamily="sans-serif-condensed"
             android:textStyle="bold"
             android:singleLine="true"
@@ -52,5 +53,23 @@
             android:layout_weight="1.0"
             android:paddingRight="10dp">
         </TextView>
+    </TableRow>
+    <TableRow>
+		<TextView 
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    />
+		<TextView 
+		    android:id="@+id/grocery_row_store"
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:textColor="@android:color/holo_red_dark"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif"
+		    />
+		<TextView 
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    />
     </TableRow>
 </TableLayout>
