--- a/GroceryOTG/res/layout/grocery_row.xml
+++ b/GroceryOTG/res/layout/grocery_row.xml
@@ -46,8 +46,7 @@
             android:text="@+id/grocery_row_price_text"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="18sp"
-            android:fontFamily="sans-serif-condensed"
-            android:textStyle="bold"
+            android:fontFamily="sans-serif"
             android:singleLine="true"
             android:gravity="right"
             android:layout_weight="1.0"
@@ -65,8 +64,7 @@
 		    android:layout_height="wrap_content"
 		    android:textColor="@android:color/holo_red_dark"
             android:textSize="18sp"
-            android:fontFamily="sans-serif"
-		    />
+            android:fontFamily="sans-serif" />
 		<TextView 
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
