--- a/GroceryOTG/res/layout/grocery_row.xml
+++ b/GroceryOTG/res/layout/grocery_row.xml
@@ -35,7 +35,7 @@
             android:textSize="16sp"
             android:fontFamily="sans-serif"
             android:textStyle="bold"
-            android:singleLine="true"
+            android:singleLine="false"
             android:gravity="center_vertical"
             android:clickable="false"
             android:focusable="false">
