--- a/GroceryOTG/res/layout/shopcart_edit.xml
+++ b/GroceryOTG/res/layout/shopcart_edit.xml
@@ -3,12 +3,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="wrap_content"
+              android:padding="20dp">
 
     <EditText
         android:id="@+id/cart_grocery_edit_name"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dip"
         android:layout_weight="1"
         android:inputType="textAutoCorrect"
         android:hint="@string/cart_grocery_edit_name"
