--- a/GroceryOTG/res/layout/shopcart_row.xml
+++ b/GroceryOTG/res/layout/shopcart_row.xml
@@ -10,11 +10,15 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
-        android:textSize="14dp"
-        android:fontFamily="sans-serif-light"
+        android:textSize="16sp"
+        android:fontFamily="sans-serif"
         android:textStyle="normal"
         android:singleLine="false"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:paddingLeft="14dp"
+        android:paddingRight="14dp"
+        android:paddingTop="18dp"
+        android:paddingBottom="18dp">
     </TextView>
 
 </LinearLayout>
