Added inShopCart indicator in GroceryOverView

--- a/GroceryOTG/res/layout/shopcart_row.xml
+++ b/GroceryOTG/res/layout/shopcart_row.xml
@@ -20,5 +20,11 @@
         android:paddingTop="18dp"
         android:paddingBottom="18dp">
     </TextView>
+    <TextView
+        android:id="@+id/cart_grocery_id"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        />
 
 </LinearLayout>
