--- a/GroceryOTG/res/layout/grocery_row.xml
+++ b/GroceryOTG/res/layout/grocery_row.xml
@@ -14,17 +14,25 @@
          android:contentDescription="@string/groceryoverview_row_imagedesc"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
-         android:layout_weight="0.15">
+         android:layout_weight="0.1">
     </ImageView>
    
     <LinearLayout android:id="@+id/linearLayoutStacked"
         android:layout_width="0dip"
         android:layout_height="wrap_content"
-        android:layout_weight="0.65"
+        android:layout_weight="0.7"
         android:orientation="vertical"
         android:padding="6dp"
         android:focusable="false"
         android:clickable="false">
+        
+        <TextView
+            android:id="@+id/grocery_row_id"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="@+id/grocery_row_id_text"
+            />
         
         <TextView
             android:id="@+id/grocery_row_label"
@@ -67,21 +75,39 @@
         
     </LinearLayout>
     
-   
-    <TextView
-        android:id="@+id/grocery_row_price"
+   <LinearLayout android:id="@+id/linearLayoutRight"
         android:layout_width="0dip"
         android:layout_height="wrap_content"
         android:layout_weight="0.2"
-        android:layout_marginTop="6dp"
-        android:text="@+id/grocery_row_price_text"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="18sp"
-        android:fontFamily="sans-serif"
-        android:singleLine="true"
-        android:gravity="right"
-        android:paddingRight="10dp"
-        android:background="#dddddd">
-    </TextView>
-    
+        android:orientation="vertical"
+        android:padding="6dp"
+        android:focusable="false"
+        android:clickable="false">
+        
+	    <TextView
+	        android:id="@+id/grocery_row_price"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="6dp"
+	        android:text="@+id/grocery_row_price_text"
+	        android:textColor="@android:color/holo_red_dark"
+	        android:textSize="18sp"
+	        android:fontFamily="sans-serif"
+	        android:singleLine="true"
+	        android:gravity="right"
+	        android:paddingRight="10dp"
+	        android:background="#dddddd">
+	    </TextView>
+	    
+	    <ImageView
+	        android:id="@+id/grocery_row_inshopcart"
+	        android:src="@drawable/ic_star"
+			android:padding="10dip"
+			android:layout_gravity="center_vertical"
+			android:contentDescription="@string/groceryoverview_row_imagedesc"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content">
+		</ImageView>
+	    
+    </LinearLayout>
 </LinearLayout>
