Changing colour of progress bar to match viewpager

--- a/GroceryOTG/res/drawable/progress_bar.xml
+++ b/GroceryOTG/res/drawable/progress_bar.xml
@@ -19,8 +19,8 @@
 	            <corners
 	                android:radius="0dip" />
 	            <gradient
-	                android:startColor="#33ff33"
-	                android:endColor="#008000"
+	                android:startColor="#33b5e5"
+	                android:endColor="#33b5e5"
 	                android:angle="270" />
 	        </shape>
 	    </clip>
