--- a/GroceryOTG/res/layout/category_fragment_list.xml
+++ b/GroceryOTG/res/layout/category_fragment_list.xml
@@ -5,7 +5,18 @@
               android:layout_height="fill_parent"
         >
     
-    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+    <GridView android:id="@+id/grid_watchlists" 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:numColumns="3"
+        android:verticalSpacing="5dp"
+        android:horizontalSpacing="5dp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:background="#dddddd"
+        />
+    
+    <GridView 
         android:id="@+id/gridview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -19,7 +30,7 @@
         android:id="@+id/empty_category_list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:gravity="center"
         android:text="@string/no_content"
         android:drawableLeft="@drawable/warning"
@@ -27,6 +38,15 @@
         android:paddingLeft="30dip"
         android:paddingRight="26dip"
         android:singleLine="false"/>
+    
+    <TextView
+        android:id="@+id/empty_watchlist"
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"
+        android:textSize="20sp"
+        android:text="@string/no_watchlists"
+        android:textColor="#ff0000"
+        />
     
 </LinearLayout>
 
