--- a/GroceryOTG/res/layout/shopcart_row.xml
+++ b/GroceryOTG/res/layout/shopcart_row.xml
@@ -1,30 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:weightSum="1.0">
 
-    <TextView
-        android:id="@+id/cart_grocery_name"
-        android:layout_width="fill_parent"
+    <LinearLayout android:id="@+id/cart_rowMiddle"
+        android:layout_width="0dip"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:textSize="16sp"
-        android:fontFamily="sans-serif"
-        android:textStyle="normal"
-        android:singleLine="false"
-        android:gravity="center_vertical"
-        android:paddingLeft="14dp"
-        android:paddingRight="14dp"
-        android:paddingTop="18dp"
-        android:paddingBottom="18dp">
-    </TextView>
-    <TextView
-        android:id="@+id/cart_grocery_id"
-        android:layout_width="fill_parent"
+        android:layout_weight="0.7"
+        android:orientation="vertical"
+        android:focusable="false"
+        android:clickable="false">
+	    <TextView
+	        android:id="@+id/cart_grocery_name"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="6dp"
+	        android:textSize="16sp"
+	        android:fontFamily="sans-serif"
+	        android:textStyle="normal"
+	        android:singleLine="false"
+	        android:gravity="center_vertical"
+	        android:paddingLeft="14dp"
+	        android:paddingRight="14dp"
+	        android:paddingTop="18dp"
+	        android:paddingBottom="18dp">
+	    </TextView>
+	    <TextView
+	        android:id="@+id/cart_grocery_id"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:visibility="gone"
+	        />
+	</LinearLayout>
+	
+    <TextView 
+        android:id="@+id/cart_flag_shoplist"
+        android:layout_width="0dip"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:layout_weight="0.15"
+        android:padding="20dp"
         />
-
+    <TextView 
+        android:id="@+id/cart_flag_watchlist"
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.15"
+        android:padding="20dp"
+        />
+    
 </LinearLayout>
