--- a/GroceryOTG/res/layout/grocery_fragment_row.xml
+++ b/GroceryOTG/res/layout/grocery_fragment_row.xml
@@ -4,27 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:weightSum="1.0">
-   
-    <ImageView
-         android:src="@drawable/add_icon"
-         android:padding="10dip"
-         android:paddingLeft="10dip"
-         android:layout_gravity="center_vertical"
-         android:contentDescription="@string/groceryoverview_row_imagedesc"
-         android:layout_width="0dip"
-         android:layout_height="wrap_content"
-         android:layout_weight="0.1">
-    </ImageView>
+    android:weightSum="1.0"
+    android:paddingLeft="8dp"
+    android:paddingRight="4dp">
    
     <LinearLayout android:id="@+id/linearLayoutStacked"
         android:layout_width="0dip"
         android:layout_height="wrap_content"
-        android:layout_weight="0.65"
+        android:layout_weight="0.7"
         android:orientation="vertical"
-        android:padding="6dp"
         android:focusable="false"
-        android:clickable="false">
+        android:clickable="false"
+        android:padding="4dp">
         
         <TextView
             android:id="@+id/grocery_row_id"
@@ -62,25 +53,39 @@
             android:gravity="center_vertical"
             android:clickable="false"
             android:focusable="false">
-        </TextView>
+        </TextView>  
         
+        <!-- 
         <TextView 
-		    android:id="@+id/grocery_row_store"
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content"
-		    android:textColor="@android:color/holo_red_dark"
-            android:textSize="18sp"
-            android:text="@+id/grocery_row_store_text"
-            android:fontFamily="sans-serif" />
+	    android:id="@+id/grocery_row_store"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:textColor="@android:color/holo_red_dark"
+        android:textSize="18sp"
+        android:text="@+id/grocery_row_store_text"
+        android:fontFamily="sans-serif"
+        android:gravity="center_vertical|left" />
+        -->
         
-    </LinearLayout>
+        <ImageView
+	        android:id="@+id/grocery_row_store"
+	        android:src="@drawable/ic_store_metro"
+			android:contentDescription="@string/groceryoverview_row_imagedesc"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:gravity="left|center_vertical"
+			android:paddingTop="8dp"
+			android:paddingBottom="4dp">
+		</ImageView>
+        
+   </LinearLayout>
     
    <LinearLayout android:id="@+id/linearLayoutRight"
         android:layout_width="0dip"
         android:layout_height="wrap_content"
-        android:layout_weight="0.25"
+        android:layout_weight="0.3"
         android:orientation="vertical"
-        android:padding="6dp"
+        android:padding="4dp"
         android:focusable="false"
         android:clickable="false">
         
@@ -103,11 +108,11 @@
 	        android:id="@+id/grocery_row_inshopcart"
 	        android:src="@drawable/ic_star"
 			android:padding="10dip"
-			android:layout_gravity="center_vertical"
 			android:contentDescription="@string/groceryoverview_row_imagedesc"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content">
 		</ImageView>
-	    
+	
     </LinearLayout>
+    
 </LinearLayout>
