--- a/GroceryOTG/res/layout/grocery_fragment_row.xml
+++ b/GroceryOTG/res/layout/grocery_fragment_row.xml
@@ -121,7 +121,7 @@
 	            android:layout_width="fill_parent"
 	            android:layout_height="wrap_content"
 	            android:visibility="gone"
-	            android:text="false"
+	            android:text="0"
 	            />
 	        <ImageButton
 	            android:id="@+id/grocery_row_inshopcart"
@@ -138,7 +138,7 @@
 	            android:layout_width="fill_parent"
 	            android:layout_height="wrap_content"
 	            android:visibility="gone"
-	            android:text="false"
+	            android:text="0"
 	            />
 			<ImageButton
 			    android:id="@+id/grocery_row_inwatchlist"
