--- a/GroceryOTG/res/layout/grocery_fragment_row.xml
+++ b/GroceryOTG/res/layout/grocery_fragment_row.xml
@@ -128,12 +128,13 @@
 	            android:id="@+id/grocery_row_inshopcart"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
+	            android:background="@null"
 	            android:clickable="true"
 	            android:contentDescription="@string/groceryoverview_row_imagedesc"
-	            android:paddingBottom="4dp"
 	            android:paddingRight="8dp"
 	            android:paddingTop="8dp"
-	            android:src="@drawable/ic_star">
+	            android:src="@drawable/ic_flag_shoplist" >
+
 			</ImageButton>
 			
 	        <TextView
@@ -148,12 +149,13 @@
 			    android:id="@+id/grocery_row_inwatchlist"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
+			    android:background="@null"
 			    android:clickable="true"
 			    android:contentDescription="@string/groceryoverview_row_imagedesc"
-			    android:paddingBottom="4dp"
 			    android:paddingRight="8dp"
 			    android:paddingTop="8dp"
-			    android:src="@drawable/ic_star" >
+			    android:src="@drawable/ic_flag_watchlist" >
+
 			</ImageButton>
 			
 		</LinearLayout>
