--- a/GroceryOTG/res/layout/splash_screen.xml
+++ b/GroceryOTG/res/layout/splash_screen.xml
@@ -6,10 +6,10 @@
               android:orientation="vertical"
               android:background="@drawable/splash_screen_grey" >
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-	    <ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
+	    <ProgressBar 
 	        android:id="@+id/loading_progress_bar"
 	        style="@android:style/Widget.ProgressBar.Horizontal"
 	        android:layout_width="match_parent"
