--- a/GroceryOTG/res/menu/grocery_pager_menu1.xml
+++ b/GroceryOTG/res/menu/grocery_pager_menu1.xml
@@ -16,15 +16,22 @@
         android:icon="@drawable/ic_menu_filter"/>
 
     <item
+        android:id="@+id/map"
+        android:showAsAction="always"
+        android:title="@string/slidingmenu_item_map"
+        android:icon="@drawable/ic_menu_map"/>
+    
+    <item
+        android:id="@+id/shop_cart"
+        android:showAsAction="always"
+        android:title="@string/slidingmenu_item_cart"
+        android:icon="@drawable/ic_menu_cart"/>
+    
+    <!-- 
+    <item
         android:id="@+id/selectmode"
         android:showAsAction="always"
         android:title="@string/groceryoverview_menu_item_select"
         android:icon="@drawable/ic_menu_select" />
-    
-    <item
-        android:id="@+id/refresh"
-        android:showAsAction="always"
-        android:icon="@drawable/ic_menu_refresh"
-        android:title="@string/groceryoverview_menu_item_refresh" />
-
+    -->
 </menu>
