--- a/GroceryOTG/res/xml/preferences.xml
+++ b/GroceryOTG/res/xml/preferences.xml
@@ -12,7 +12,11 @@
 
         <ListPreference
             android:key="notification_freq"
-            android:title="Frequency"/>
+            android:title="@string/setting_notification_freq_title"
+            android:summary="@string/setting_notification_freq_summary"
+            android:entries="@array/freq_entry"
+            android:entryValues="@array/freq_value"
+            android:defaultValue="3"/>
 
     </PreferenceCategory>
 
@@ -21,7 +25,13 @@
 
         <MultiSelectListPreference
             android:key="store_select"
-            android:title="Select a store"/>
+            android:title="@string/setting_store_title"
+            android:summary="@string/setting_store_summary"
+            android:dialogTitle="@string/setting_store_dialog_title"
+            android:entries="@array/store_names"
+            android:entryValues="@array/stores"
+            android:defaultValue="@array/stores"
+            />
 
     </PreferenceCategory>
 
