Added filtering to ShopCartOverview

--- a/GroceryOTG/res/menu/shopcart_menu.xml
+++ b/GroceryOTG/res/menu/shopcart_menu.xml
@@ -5,7 +5,19 @@
     <item
         android:id="@+id/cart_add"
         android:showAsAction="always"
-        android:title="Map"
+        android:title="@string/cart_shoplist_add"
         android:icon="@drawable/add_icon"/>
+    
+    <item
+        android:id="@+id/cart_filter_shoplist"
+        android:showAsAction="always"
+        android:title="@string/cart_filter_shoplist"
+        android:icon="@drawable/ic_menu_cart"/>
+    
+    <item
+        android:id="@+id/cart_filter_watchlist"
+        android:showAsAction="always"
+        android:title="@string/cart_filter_watchlist"
+        android:icon="@drawable/ic_menu_watch"/>
 
 </menu>
