--- a/GroceryOTG/res/layout/grocery_fragment_row.xml
+++ b/GroceryOTG/res/layout/grocery_fragment_row.xml
@@ -95,6 +95,13 @@
             android:layout_weight="0.75"
             android:orientation="horizontal" >
 
+            <TextView
+                android:id="@+id/grocery_row_store_id"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:text="0"
+                />
 	        <ImageButton
 	            android:id="@+id/grocery_row_store"
 	            android:layout_width="wrap_content"
