--- a/GroceryOTG/res/xml/preferences.xml
+++ b/GroceryOTG/res/xml/preferences.xml
@@ -8,7 +8,8 @@
         <CheckBoxPreference
             android:key="notification_enabled"
             android:title="Enable Notification"
-            android:summary="Enables notifications from this application"/>
+            android:summary="Enables notifications from this application"
+            android:defaultValue="true" />
 
         <ListPreference
             android:key="notification_freq"
@@ -16,8 +17,7 @@
             android:summary="@string/setting_notification_freq_summary"
             android:entries="@array/freq_entry"
             android:entryValues="@array/freq_value"
-            android:defaultValue="3"/>
-
+            android:defaultValue="3" />
     </PreferenceCategory>
 
     <PreferenceCategory
