--- a/GroceryOTG/res/layout/grocery_fragment_row.xml
+++ b/GroceryOTG/res/layout/grocery_fragment_row.xml
@@ -106,10 +106,11 @@
 	            android:id="@+id/grocery_row_store"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
+                android:background="@null"
 	            android:contentDescription="@string/groceryoverview_row_imagedesc"
-	            android:background="@drawable/ic_store_metro"
-	            android:paddingBottom="0dp"
-	            android:paddingTop="0dp">
+	            android:src="@drawable/ic_store_metro"
+	            android:paddingBottom="4dp"
+	            android:paddingTop="8dp">
 			</ImageButton>
         </LinearLayout>
         
