--- a/GroceryOTG/res/layout/splash_screen.xml
+++ b/GroceryOTG/res/layout/splash_screen.xml
@@ -14,7 +14,7 @@
 	        style="@android:style/Widget.ProgressBar.Horizontal"
 	        android:layout_width="match_parent"
 	        android:layout_height="5dip"
-	        android:progressDrawable="@drawable/progress_bar"
+	        android:progressDrawable="@xml/progress_bar"
 	        android:layout_alignParentBottom="true" />
     </RelativeLayout>
 
