--- a/GroceryOTG/res/values/stores.xml
+++ b/GroceryOTG/res/values/stores.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="store_names">
+    	<item>metro</item>
+    	<item>loblaws</item>
         <item>foodbasics</item>
-        <item>nofrills</item>
-        <item>metro</item>
-        <item>loblaws</item>
-        <item>sobeys</item>
+		<item>nofrills</item>
+		<item>sobeys</item>
+    </string-array>
+    <string-array name="store_ids">
+        <item>1</item>
+    	<item>2</item>
+        <item>3</item>
+		<item>4</item>
+		<item>5</item>
     </string-array>
 </resources>
