--- a/GroceryOTG/res/xml/preferences.xml
+++ b/GroceryOTG/res/xml/preferences.xml
@@ -30,6 +30,7 @@
             android:dialogTitle="@string/setting_store_dialog_title"
             android:entries="@array/store_names"
             android:entryValues="@array/store_ids"
+            android:defaultValue="@string/legacy_store_filter_ids"
             />
 
     </PreferenceCategory>
