--- a/GroceryOTG/res/layout/shopcart_list.xml
+++ b/GroceryOTG/res/layout/shopcart_list.xml
@@ -8,8 +8,8 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        android:layout_height="wrap_content"
+        android:dividerHeight="2dp" />
 
     <TextView
         android:id="@android:id/empty"
@@ -22,6 +22,6 @@
         android:drawablePadding="2dip"
         android:paddingLeft="30dip"
         android:paddingRight="26dip"
-        android:singleLine="false"/>
+        android:singleLine="false" />
 
 </LinearLayout>
