--- a/GroceryOTG/res/layout/grocery_fragment_list.xml
+++ b/GroceryOTG/res/layout/grocery_fragment_list.xml
@@ -20,9 +20,8 @@
 
         <ProgressBar
             android:id="@+id/refresh_progress"
-            style="@android:style/Widget.ProgressBar.Large"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:progressDrawable="@xml/progress_bar_circular"
             android:layout_gravity="center_horizontal"
             />
